--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Alarm"
         tools:targetApi="31">
         <activity
+            android:name=".TimesetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MemoActivity"
+            android:exported="false" />
+        <activity
             android:name=".AlarmActivity"
             android:exported="false" />
         <activity
