--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Alarm"
         tools:targetApi="31">
         <activity
+            android:name=".Alarm"
+            android:exported="false" />
+        <activity
             android:name=".TimesetActivity"
             android:exported="false" />
         <activity
