--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.websarva.wings.android.alarm">
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Alarm"
         tools:targetApi="31">
-        <activity
-            android:name=".Alarm"
-            android:exported="false" />
+
+        <receiver android:name=".AlarmReceiver" />
+
         <activity
             android:name=".TimesetActivity"
             android:exported="false" />
@@ -29,10 +33,13 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <activity
+            android:name=".AlarmScreenActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Alarm" />
 
+    </application>
 </manifest>
